--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,18 +1,18 @@
 <div class='events-header' style='background-image: url(<%= header_background_image_url %>)'>
   <div class="container">
     <h2> Discover upcoming events </h2>
-    <form>
-      <input type="text" class="form-control" name="search" placeholder="Search for events, shows, courses...">
-    </form>
+    <%= form_tag(events_path, :method => 'get', id: 'search-form') do %>
+        <%= text_field_tag :keyword, params[:keyword], placeholder: 'Search for events, shows, courses...', class: 'form-control' %>
+    <% end %>
   </div>
 </div>
 <div class="container-fluid events-list">
-    <% @events.in_groups_of(3) do |g| %>
+  <% @events.in_groups_of(3) do |g| %>
       <div class="row">
         <% g.compact.each do |e| %>
             <%= render partial: 'card', locals: {event: e} %>
         <% end %>
-      </div>  
-    <% end %>
-  </div>
+      </div>
+  <% end %>
+</div>
 </div>
