--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,24 +2,44 @@
 <html>
 <head>
   <title>CsTemplate</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-  <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
-    <a class="navbar-brand" href="<%= root_path %>">Coder Ticket</a>
-    <ul class="nav navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Log In</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Sign Up</a>
-      </li>
-    </ul>
-  </nav>  
-
+<nav class="navbar  navbar-dark bg-inverse">
+  <a class="navbar-brand" href="<%= root_path %>">Coder Ticket</a>
+  <ul class="nav navbar-nav">
+    <% unless signed_in? %>
+        <li class="nav-item">
+          <%= link_to 'Log In', new_session_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Sign Up', new_user_path, class: 'nav-link' %>
+        </li>
+    <% else %>
+        <div class="form-inline pull-xs-right">
+          <li class="nav-item active">
+            <div class="nav-link"> Hello <%= current_user.name %>,</div>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Log Out', session_path(current_user), method: 'delete', class: 'nav-link' %>
+          </li>
+        </div>
+    <% end %>
+  </ul>
+</nav>
+<% if flash[:error] %>
+    <div class="alert alert-danger">
+      <%= flash[:error] %>
+    </div>
+<% end %>
+<% if flash[:success] %>
+    <div class="alert alert-success">
+      <%= flash[:success] %>
+    </div>
+<% end %>
 <%= yield %>
 
 </body>
