--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,16 +1,21 @@
-<div class="signup-form">
-  <%= form_for User.new do |f| %>
-      <div class="form-group">
-        <%= f.text_field 'email', class: 'form-control', placeholder: 'Your E-mail' %>
-      </div>
-      <div class="form-group">
-        <%= f.text_field 'name', class: 'form-control', placeholder: 'Name' %>
-      </div>
-      <div class="form-group">
-        <%= f.password_field 'password', class: 'form-control', placeholder: 'Password' %>
-      </div>
-      <div class="form-group">
-        <%= f.submit 'Register', class: 'btn btn-block btn-info' %>
-      </div>
-  <% end %>
+<div class="container avoid-nav">
+  <h1>Sign Up</h1>
+  <div class="row col-md-6 col-md-offset-3">
+    <div class="signup-form">
+      <%= form_for User.new do |f| %>
+          <div class="form-group">
+            <%= f.text_field 'email', class: 'form-control', placeholder: 'Your E-mail' %>
+          </div>
+          <div class="form-group">
+            <%= f.text_field 'name', class: 'form-control', placeholder: 'Name' %>
+          </div>
+          <div class="form-group">
+            <%= f.password_field 'password', class: 'form-control', placeholder: 'Password' %>
+          </div>
+          <div class="form-group">
+            <%= f.submit 'Register', class: 'btn btn-block btn-info' %>
+          </div>
+      <% end %>
+    </div>
+  </div>
 </div>
