add ticket type controller

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,13 +1,15 @@
 <div class="signup-form">
-  <%= form_for Event.new do |f| %>
+  <%= form_for @event do |f| %>
       <div class="form-group">
         <%= f.text_field 'name', class: 'form-control', placeholder: 'Name Event' %>
       </div>
       <div class="form-group">
         <%= f.label :starts_at %>
-        <%= f.date_select 'starts_at', class: 'form-control' %>
+        <%= f.datetime_select 'starts_at', class: 'form-control' %>
+      </div>
+      <div class="form-group">
         <%= f.label :ends_at %>
-        <%= f.date_select 'ends_at', class: 'form-control' %>
+        <%= f.datetime_select 'ends_at', class: 'form-control' %>
       </div>
       <div>
         <%= f.label :venue %>
@@ -24,7 +26,7 @@
         <%= f.text_area 'extended_html_description', class: 'form-control', placeholder: 'Description' %>
       </div>
       <div class="form-group">
-        <%= f.submit 'Publish', class: 'btn btn-block btn-info' %>
+        <%= f.submit class: 'btn btn-block btn-info' %>
       </div>
   <% end %>
 </div>
