--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,10 @@
         </li>
     <% else %>
         <li class="nav-item">
-          <%= link_to 'Create Event', new_event_path, class: 'nav-link' %>
+          <%= link_to 'Events', list_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Ticket Types', types_path, class: 'nav-link' %>
         </li>
         <div class="form-inline pull-xs-right">
           <li class="nav-item active">
