add venue controller

--- a/app/views/types/_form.html.erb
+++ b/app/views/types/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="signup-form">
-  <%= form_for @type, url: 'type' do |f| %>
+  <%= form_for @type do |f| %>
       <div class="form-group">
         <%= f.text_field 'name', class: 'form-control', placeholder: 'Name Event' %>
       </div>
