--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
           <%= link_to 'Events', list_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
-          <%= link_to 'Ticket Types', types_path, class: 'nav-link' %>
+          <%= link_to 'Ticket Types', ticket_types_path, class: 'nav-link' %>
         </li>
         <li class="nav-item">
           <%= link_to 'Venues', venues_path, class: 'nav-link' %>
