--- a/app/views/venues/_form.html.erb
+++ b/app/views/venues/_form.html.erb
@@ -6,12 +6,10 @@
       <div class="form-group">
         <%= f.text_area 'full_address', class: 'form-control', placeholder: 'Name Event' %>
       </div>
-      <% unless @venue.region %>
-          <div>
-            <%= f.label :region %>
-            <%= f.select :region_id, @regions.map { |region| [region.name, region.id] }, class: 'form-control' %>
-          </div>
-      <% end %>
+      <div>
+        <%= f.label :region %>
+        <%= f.select :region_id, Region.all.map { |region| [region.name, region.id] }, class: 'form-control' %>
+      </div>
       <div class="form-group">
         <%= f.submit class: 'btn btn-block btn-info' %>
       </div>
