--- a/app/views/events/list.html.erb
+++ b/app/views/events/list.html.erb
@@ -1,30 +1,32 @@
-<div class="container avoid-nav">
-  <h1> Events</h1>
-  <div class="pull-xs-right">
-    <%= link_to 'Create Event', new_event_path, class: 'btn btn-success-outline' %>
-  </div>
-  <table class="table table-striped">
-    <thead>
-    <tr>
-      <th>#</th>
-      <th>Name</th>
-      <th>Starts At</th>
-      <th>Venue</th>
-      <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    <% @events.each do |event| %>
-        <tr>
-          <th scope="row"><%= event.id %></th>
-          <td><%= event.name %></td>
-          <td><%= event.starts_at.strftime('%A, %d %b %Y %l:%M %p') %></td>
-          <td><%= event.venue.name %></td>
-          <td>
-            <%= link_to 'Edit', edit_event_path(id: event), class: 'btn btn-info-outline' %>
-          </td>
-        </tr>
-    <% end %>
-    </tbody>
-  </table>
+<div class="container">
+<h1> Events</h1>
+<div class="pull-xs-right">
+  <%= link_to 'Create Event', new_event_path, class: 'btn btn-success-outline' %>
+</div>
+<table class="table table-striped">
+  <thead>
+  <tr>
+    <th>#</th>
+    <th>Name</th>
+    <th>Starts At</th>
+    <th>Venue</th>
+    <th></th>
+  </tr>
+  </thead>
+  <tbody>
+  <% @events.each do |event| %>
+      <tr>
+        <th scope="row"><%= event.id %></th>
+        <td><%= event.name %></td>
+        <td><%= event.starts_at.strftime('%A, %d %b %Y %l:%M %p') %></td>
+        <td><%= event.venue.name %></td>
+        <td>
+          <% if event.is_owned?(current_user) %>
+              <%= link_to 'Edit', edit_event_path(id: event), class: 'btn btn-info-outline' %>
+          <% end %>
+        </td>
+      </tr>
+  <% end %>
+  </tbody>
+</table>
 </div>
