--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,5 +1,5 @@
-<div class="container avoid-nav">
-  <h1> Events</h1>
+<div class="container">
+  <h1> Venus</h1>
   <div class="pull-xs-right">
     <%= link_to 'Create Venue', new_venue_path, class: 'btn btn-success-outline' %>
   </div>
