--- a/app/views/events/list.html.erb
+++ b/app/views/events/list.html.erb
@@ -26,7 +26,7 @@
           </td>
           <td>
             <% if event.is_owned?(current_user) %>
-                <%= link_to 'Edit', event, class: 'btn btn-info-outline' %>
+                <%= link_to 'Edit', edit_event_path(event), class: 'btn btn-info-outline' %>
                 <%= link_to 'Delete', event, method: 'delete', class: 'btn btn-danger-outline' %>
                 <% if event.is_publish? %>
                     <%= link_to 'Unpublish', event_publish_path(event), method: 'post', class: 'btn btn-success-outline' %>
