--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,13 +19,13 @@
           <%= link_to 'Sign Up', new_user_path, class: 'nav-link' %>
         </li>
     <% else %>
-        <li class="nav-item">
+        <li class="nav-item <%= 'active' if current_page?(list_path) %>">
           <%= link_to 'Events', list_path, class: 'nav-link' %>
         </li>
-        <li class="nav-item">
+        <li class="nav-item <%= 'active' if current_page?(ticket_types_path) %>">
           <%= link_to 'Ticket Types', ticket_types_path, class: 'nav-link' %>
         </li>
-        <li class="nav-item">
+        <li class="nav-item <%= 'active' if current_page?(venues_path) %>">
           <%= link_to 'Venues', venues_path, class: 'nav-link' %>
         </li>
         <div class="form-inline pull-xs-right">
