--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -21,29 +21,37 @@
 
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-11 col-md-offset-1">
-      <table class="table">
-        <th> Ticket Type</th>
-        <th> Unit Price</th>
-        <th> Quantity</th>
+  <% if @event.is_coming? %>
+      <div class="row">
+        <div class="col-md-11 col-md-offset-1">
 
-        <% @event.ticket_types.each do |type| %>
-            <tr>
-              <td> <%= type.name %> </td>
-              <td> <%= number_to_currency(type.price, unit: 'VND ', precision: 0) %> </td>
-              <td> <%= select_tag('quantity', options_for_select(0..10)) %></td>
-            </tr>
-        <% end %>
-      </table>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-2 col-md-offset-5">
-      <button class="btn btn-success btn-lg btn-block"> Buy</button>
-    </div>
-    <div>
-    </div>
-  </div>
+          <table class="table">
+            <th> Ticket Type</th>
+            <th> Unit Price</th>
+            <th> Quantity</th>
+
+            <% @event.ticket_types.each do |type| %>
+                <tr>
+                  <td> <%= type.name %> </td>
+                  <td> <%= number_to_currency(type.price, unit: 'VND ', precision: 0) %> </td>
+                  <td> <%= select_tag('quantity', options_for_select(0..10)) %></td>
+                </tr>
+            <% end %>
+          </table>
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-2 col-md-offset-5">
+          <button class="btn btn-success btn-lg btn-block"> Buy</button>
+        </div>
+        <div>
+        </div>
+      </div>
+  <% else %>
+      <div>
+        EVENT FINISHED, BOOKING NOT AVAILABLE
+      </div>
+  <% end %>
 </div>
 
