--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -22,7 +22,7 @@
         <% if @event.is_coming? %>
             <%= link_to 'BOOK NOW', new_event_ticket_path(@event), class: 'btn btn-lg btn-block btn-danger' %>
         <% else %>
-            <div>BOOKING IS NOT AVAILABLE</div>
+            <button class="btn btn-secondary btn-lg disabled">BOOKING UNAVAILABLE</button>
         <% end %>
       </div>
     </div>
